Home page fix bug: filters were not responsive

--- a/www/css/autoload/aggregate/index.css
+++ b/www/css/autoload/aggregate/index.css
@@ -77,3 +77,9 @@
   line-height: 1.4em;
   border-radius: 4px;
 }
+
+@media (max-width: 768px){
+  .home-filters .select2-container {
+    width: 100% !important;
+  }
+}
